[package]
name = "ludum-dare-37"
version = "0.1.0"
authors = ["Samuel Gélineau <gelisam+github@gmail.com>"]

[dependencies]
carboxyl = "0.2"
carboxyl_time = "0.0.2"
piston = "0.27.0"
piston2d-graphics = "0.19.0"
piston2d-opengl_graphics = "0.36.0"
pistoncore-glutin_window = "0.33.0"
time = "0.1"

[replace]
# patch to use carboxyl:0.2, see https://github.com/aepsil0n/carboxyl_time/pull/2
"carboxyl_time:0.0.2" = { path = '../carboxyl_time' }
